fix: fixed scrollbar for message body component and render username for sender

--- a/client/src/styles/MessageInput.module.scss
+++ b/client/src/styles/MessageInput.module.scss
@@ -39,7 +39,7 @@
         }
     }
 
-    form {
+    .input_body {
         position: relative;
         margin: 52px 24px 24px 8px;
         width: 92%;
